--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>H4rdi Dev</title>
+    <title>Kal Dev</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="icon" type="image/png" href="https://telegra.ph/file/63918dccba2f979c6b5b8.jpg">
@@ -16,7 +16,7 @@
         <div class="profile-info">
             <h2>H4rdiDev</h2>
             <p>Newbie Developer</p>
-            <p>Hai! Saya HARDIYANSYAH, seorang pemuda berusia 17 tahun yang bersemangat dari Kepulauan Riau. Saya adalah seseorang yang senang menjelajahi teknologi dan seni, serta selalu mencari tantangan baru untuk dikembangkan.</p>
+            <p>Hai! Saya Kal STR, seorang pemuda berusia 15 tahun yang bersemangat dari Jakarta. Saya adalah seseorang yang senang menjelajahi teknologi dan seni, serta selalu mencari tantangan baru untuk dikembangkan.</p>
         </div>
         <div class="links-container">
             <div class="link-card">
