--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="https://telegra.ph/file/63918dccba2f979c6b5b8.jpg" alt="Profile Image">
         </div>
         <div class="profile-info">
-            <h2>H4rdiDev</h2>
+            <h2>Kal STR</h2>
             <p>Newbie Developer</p>
             <p>Hai! Saya Kal STR, seorang pemuda berusia 15 tahun yang bersemangat dari Jakarta. Saya adalah seseorang yang senang menjelajahi teknologi dan seni, serta selalu mencari tantangan baru untuk dikembangkan.</p>
         </div>
