--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
         </div>
         <div class="links-container">
             <div class="link-card">
-                <a href="https://wa.me/6281378300839" class="link-item">
+                <a href="https://wa.me/6285691460736" class="link-item">
                     <i class="fab fa-whatsapp"></i>
                     WhatsApp
                 </a>
             </div>
             <div class="link-card">
-                <a href="https://www.instagram.com/hardi.lah" class="link-item">
+                <a href="https://www.instagram.com/Mazhaikal_" class="link-item">
                     <i class="fab fa-instagram"></i>
                     Instagram
                 </a>
             </div>
             <div class="link-card">
-                <a href="https://github.com/H4rdiDev" class="link-item">
+                <a href="https://github.com/KSTR014" class="link-item">
                     <i class="fab fa-github"></i>
                     GitHub
                 </a>
